--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "proyecto",
+  "name": "mercadoLiebre",
   "version": "1.0.0",
-  "description": "proyecto de prueba",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "e.i.",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Eduardo-Iza/mercadoliebre.git"
+  },
   "keywords": [],
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Eduardo-Iza/mercadoliebre/issues"
+  },
+  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme"
 }
