--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mercadoliebre",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start":"node app.js"
    },
@@ -12,6 +12,10 @@
   },
   "keywords": [],
   "author": "",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
+
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Eduardo-Iza/mercadoliebre/issues"
