--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/Eduardo-Iza/mercadoliebre/issues"
   },
-  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme",
-  "dependencies": {
-    "express": "^4.17.1"
+  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme"
   }
-}
