--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js"
-   },
+    "start": "node app.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Eduardo-Iza/mercadoliebre2.git"
   },
   "keywords": [],
   "author": "",
-    "license": "ISC",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Eduardo-Iza/mercadoliebre/issues"
   },
-  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme"
+  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme",
+  "dependencies": {
+    "express": "^4.17.1"
   }
+}
