--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mercadoliebre",
+  "name": "mercadoLiebre",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Eduardo-Iza/mercadoliebre/issues"
+    "url": "https://github.com/Eduardo-Iza/mercadoliebre2/issues"
   },
-  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre#readme",
+  "homepage": "https://github.com/Eduardo-Iza/mercadoliebre2#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "node_module": "0.0.0"
   }
 }
